plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.iudx'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

bootRun {
	jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
}

repositories {
	mavenCentral()
	maven { url "https://repository.apache.org/content/repositories/releases/" }
}


dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.amqp:spring-rabbit-stream'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'


	// Flink dependencies
	implementation("org.apache.flink:flink-clients:1.20.0")
	implementation group: 'org.apache.flink', name: 'flink-connector-rabbitmq', version: '3.0.1-1.17'
	implementation 'org.apache.flink:flink-connector-jdbc_2.12:1.14.4'

	runtimeOnly 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.amqp:spring-rabbit-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.apache.commons:commons-lang3:3.12.0'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.0'


}

tasks.named('test') {

	useJUnitPlatform()
}
